--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,9 +1,9 @@
-#Mon Dec 31 13:23:32 MSK 2018
+#Thu Jan 10 21:08:55 MSK 2019
 javarush.query.filter=
 javarush.quest.filter=QUEST_JAVA_MULTITHREADING
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task27.task2711
-javarush.last.task.path=C\:/Users/kshegolev/IdeaProjects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task27/task2711
+javarush.last.task.key=com.javarush.task.task31.task3110.big18
+javarush.last.task.path=C\:/Users/kshegolev/IdeaProjects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task31/task3110
 javarush.user.secretkey=80c4112b-c3b4-4573-8da6-002c379e42a0
 javarush.skip.set.autoscrolls=true
 javarush.level.filter=7
