--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,9 +1,9 @@
-#Thu Jan 10 21:08:55 MSK 2019
+#Fri Jan 11 16:49:33 MSK 2019
 javarush.query.filter=
 javarush.quest.filter=QUEST_JAVA_MULTITHREADING
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task31.task3110.big18
-javarush.last.task.path=C\:/Users/kshegolev/IdeaProjects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task31/task3110
+javarush.last.task.key=com.javarush.task.task28.task2801
 javarush.user.secretkey=80c4112b-c3b4-4573-8da6-002c379e42a0
+javarush.last.task.path=C\:/Users/kshegolev/IdeaProjects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task28/task2801
 javarush.skip.set.autoscrolls=true
-javarush.level.filter=7
+javarush.level.filter=8
