--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,9 +1,9 @@
-#Sat Jan 12 00:11:05 MSK 2019
+#Mon Jan 14 20:03:58 MSK 2019
 javarush.query.filter=
 javarush.quest.filter=QUEST_JAVA_MULTITHREADING
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task32.task3209.big24
-javarush.last.task.path=C\:/Users/kshegolev/IdeaProjects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task32/task3209
+javarush.last.task.key=com.javarush.task.task29.task2901
 javarush.user.secretkey=80c4112b-c3b4-4573-8da6-002c379e42a0
+javarush.last.task.path=C\:/Users/kshegolev/IdeaProjects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task29/task2901
 javarush.skip.set.autoscrolls=true
-javarush.level.filter=8
+javarush.level.filter=9
