--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,9 +1,9 @@
-#Mon Jan 14 20:43:06 MSK 2019
+#Tue Jan 29 16:48:59 MSK 2019
 javarush.query.filter=
 javarush.quest.filter=QUEST_JAVA_MULTITHREADING
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task29.task2913
-javarush.last.task.path=C\:/Users/kshegolev/IdeaProjects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task29/task2913
+javarush.last.task.key=com.javarush.task.task27.task2712.big14
 javarush.user.secretkey=80c4112b-c3b4-4573-8da6-002c379e42a0
+javarush.last.task.path=C\:/Users/kshegolev/IdeaProjects/JavaRushTasks/3.JavaMultithreading/src/com/javarush/task/task27/task2712
 javarush.skip.set.autoscrolls=true
 javarush.level.filter=9
